--- a/src/Login.css
+++ b/src/Login.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 70vh;
+    min-height: 100vh;
     margin: 0;
   }
   
@@ -23,19 +23,19 @@
     border-radius: 4px;
   }
   
-  .loginStyle input[type="submit"] {
-    width: 100%;
-    background-color: #4CAF50;
+  .loginStyle button {
+    width: 50%;
+    background-color: #0074D9; /* Cor azul para o botão */
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
-    border-radius: 4px;
+    border-radius: 6px;
     cursor: pointer;
+    transition: opacity 0.3s ease; /* Adicionando uma transição suave de opacidade */
   }
   
-  .loginStyle h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
+  .loginStyle button:hover {
+    opacity: 0.8; /* Reduzindo a opacidade no hover */
   }
   
