--- a/src/Login.css
+++ b/src/Login.css
@@ -1,41 +1,73 @@
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    margin: 0;
-  }
-  
-  .loginStyle {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 300px;
-  }
-  
-  .loginStyle input[type="text"],
-  .loginStyle input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    margin: 8px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .loginStyle button {
-    width: 50%;
-    background-color: #0074D9; /* Cor azul para o botão */
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    transition: opacity 0.3s ease; /* Adicionando uma transição suave de opacidade */
-  }
-  
-  .loginStyle button:hover {
-    opacity: 0.8; /* Reduzindo a opacidade no hover */
-  }
-  
+/* google fonts */
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+body{
+  margin: 20px 40px;
+  font-size: 1.2rem;
+  letter-spacing: 1px;
+  background: #fafafa;
+}
+h1, h2, h3, h4, ul, li, a, p, input, label, button, div, footer{
+  margin: 0;
+  padding: 0;
+  font-family: 'Quicksand', sans-serif;
+  color: #444;
+}
+
+.loginButton{
+  margin-top: 30px;
+  border-radius: 36px;
+  background: #54D1E0;
+  border:0;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 0.8em;
+  display: block;
+  padding: 10px 16px;
+  letter-spacing: 2px;
+  color: #053552;
+}
+
+input{
+  padding: 10px 12px;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+  font-size: 1em;
+  width: 92%;
+}
+label{
+  display: block;
+  margin: 20px 0 10px;
+}
+
+
+h2{
+  font-size: 2.4em;
+  font-weight: 900;
+  margin-bottom: 40px;
+}
+
+
+.loginStyle{
+  width: 360px;
+  margin: 0 auto;
+  padding: 30px;
+  box-shadow: 1px 2px 3px rgba(0,0,0,0.1);
+  border-radius: 10px;
+  background: white;
+
+}
+
+
+.container{
+  display: flex;
+  text-align: left;
+  margin-top: 120px;
+  color: #aaa;
+
+}
+
+
+label{
+  display: block;
+  margin: 20px 0 10px;
+}
