--- a/src/Login.css
+++ b/src/Login.css
@@ -6,7 +6,7 @@ body{
   letter-spacing: 1px;
   background: #fafafa;
 }
-h1, h2, h3, h4, ul, li, a, p, input, label, button, div, footer{
+.loginStyle h1, h2, h3, h4, ul, li, a, p, input, label, button, div, footer{
   margin: 0;
   padding: 0;
   font-family: 'Quicksand', sans-serif;
