--- a/src/signup.css
+++ b/src/signup.css
@@ -19,31 +19,7 @@ ul{
 a{
   text-decoration: none;
 }
-nav{
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  margin-bottom: 120px;
-}
-nav ul{
-  display: flex;
-  align-items: center;
-}
-nav li{
-  margin-left: 20px;
-}
-nav li a{
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 0.8em;
-  display: block;
-  padding: 10px 16px;
-  letter-spacing: 2px;
-}
-.btn{
-  border-radius: 36px;
-  background: #FEE996;
-}
+
 form h2{
   font-size: 2.4em;
   font-weight: 900;
@@ -56,13 +32,14 @@ form{
   box-shadow: 1px 2px 3px rgba(0,0,0,0.1);
   border-radius: 10px;
   background: white;
+  margin-top: 13rem;
 }
 input{
   padding: 10px 12px;
   border-radius: 4px;
   border: 1px solid #ddd;
   font-size: 1em;
-  width: 100%;
+  width: 93%;
 }
 label{
   display: block;
@@ -80,7 +57,7 @@ button{
     padding: 10px 16px;
     letter-spacing: 2px;
     color: #053552;
-   
+  
 }
 .error{
   color: #ff0099;
