--- a/src/components/AdminMenu.css
+++ b/src/components/AdminMenu.css
@@ -1,82 +1,94 @@
 .admin-menu {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
-  }
-  
-  .user-form {
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    margin-top: 20px;
-  }
-  
-  .user-form label {
-    margin-bottom: 5px;
-  }
-  
-  .user-form input,
-  .user-form select {
-    padding: 8px;
-    margin-bottom: 10px;
-  }
-  
-  .user-form button {
-    padding: 10px;
-    background-color: #4caf50;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .user-form button:hover {
-    background-color: #45a049;
-  }
-  
-  .error-message {
-    color: red;
-    margin-bottom: 10px;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
 
-  .modal {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
-  }
-  
+.user-form {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  margin-top: 20px;
+}
+
+.user-form label {
+  margin-bottom: 5px;
+}
+
+.user-form input,
+.user-form select {
+  padding: 8px;
+  margin-bottom: 10px;
+}
+
+.user-form button {
+  padding: 10px;
+  background-color: #4caf50;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+.user-form button:hover {
+  background-color: #45a049;
+}
+
+.error-message {
+  color: red;
+  margin-bottom: 10px;
+}
+
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 40%;
+  position: relative;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-form {
+  padding: 20px;
+}
+
+/* Para telas menores, ajuste o layout */
+@media only screen and (max-width: 600px) {
   .modal-content {
-    background-color: white;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 40%;
-    position: relative;
+    width: 80%;
   }
-  
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
+}
+
+/* Para telas maiores, mantenha o layout padrão */
+@media only screen and (min-width: 601px) {
+  .modal-content {
+    width: 50%;
   }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
-  .modal-form {
-    padding: 20px;
-  }
-  
+}
