--- a/src/components/AdminMenu.css
+++ b/src/components/AdminMenu.css
@@ -56,7 +56,8 @@
   background-color: white;
   padding: 20px;
   border: 1px solid #888;
-  width: 40%;
+  width: 16%;
+  align-items: center;
   position: relative;
 }
 
@@ -80,15 +81,12 @@
 }
 
 /* Para telas menores, ajuste o layout */
-@media only screen and (max-width: 600px) {
-  .modal-content {
+@media screen and (width < 700px) {
+  .modal-content{
     width: 80%;
   }
-}
 
-/* Para telas maiores, mantenha o layout padrão */
-@media only screen and (min-width: 601px) {
-  .modal-content {
-    width: 50%;
-  }
+.user-form {
+   width:100%;
+}
 }
