--- a/src/components/UserList.css
+++ b/src/components/UserList.css
@@ -7,3 +7,23 @@
     margin-left: 1rem;
     cursor: pointer;
 }
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+  }
+  
+  tr:nth-child(even) {
+    background-color: #dddddd;
+  }
+
+  .administrador{
+    background-color: red;
+  }
