--- a/src/components/AdminMenu.css
+++ b/src/components/AdminMenu.css
@@ -3,8 +3,19 @@
   flex-direction: column;
   align-items: center;
   margin-top: 20px;
+  
 }
-
+.admin-menu button{
+  background-color:#14337c;
+  color: white;
+  padding: .8rem;
+  border: 0;
+  border-radius: 100px;
+  cursor: pointer;
+  font-size: 1rem;
+  font-family: "urbanist";
+  font-weight: 600;
+}
 .user-form {
   display: flex;
   flex-direction: column;
