--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -76,3 +76,12 @@ input::placeholder{
   font-family: 'Quicksand', sans-serif;
   color: #636262;
 }
+
+
+.button{
+  display: flex;
+  align-items: center;
+  gap: .3rem;
+  margin-top: 5rem;
+  cursor: pointer;
+}
