--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Urbanist:wght@100;300;400;500;600;900&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    min-height: 100vh;
+
+}
