--- a/src/components/UserList.css
+++ b/src/components/UserList.css
@@ -23,7 +23,7 @@ table {
   
  
 
-  .adminstrador {
+  .administrador {
     color: #11C7A1 !important; 
     font-size: 1.3rem;
     font-weight: 600;
