--- a/src/components/topBar/TopBar.module.css
+++ b/src/components/topBar/TopBar.module.css
@@ -1,6 +1,8 @@
 .topBar{
     width: 100%;
     height: 50px;
+   
+    
 }
 
 .topBarWrapper{
@@ -25,8 +27,8 @@
     position: absolute;
     width: 15px;
     height: 15px;
-    top: 25px;
-    right: 55px;
+    top: -5px;
+    left:  10px;
     border-radius: 50%;
     background-color: red;
     color: white;
@@ -34,4 +36,24 @@
     text-align: center;
     justify-content: center;
     font-size: .7rem;
+}
+
+.topRight{
+    display: flex;
+    align-items: center;
+}
+
+.topbarIconContainer{
+    position: relative;
+    cursor: pointer;
+    margin-right: .5rem;
+    color: #555;
+
+   
+}
+
+.topAvatar{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
 }
