--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -12,8 +12,8 @@
     height: 30vh;
     cursor: pointer;
     
-    -webkit-box-shadow: 0px 0px 11px -5px #000000; 
-    box-shadow: 0px 0px 11px -5px #000000;
+    -webkit-box-shadow: 0px 0px 7px -2px #8b8989; 
+box-shadow: 0px 0px 7px -2px #8b8989;
 
 
 }
