--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,21 +1,44 @@
-.info{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
+.info {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
-.infoItem{
-    flex: 1;
-    margin: 20px 20px;
-    padding: 30px;
-    border-radius: 1rem;
-    height: 30vh;
-    cursor: pointer;
-    
-    -webkit-box-shadow: 0px 0px 7px -2px #8b8989; 
-box-shadow: 0px 0px 7px -2px #8b8989;
-
-
+.infoItem {
+  flex: 1;
+  margin: 40px 20px;
+  padding: 30px;
+  border-radius: 1rem;
+  height: 30vh;
+  cursor: pointer;
+  -webkit-box-shadow: 0px 0px 7px -2px #8b8989;
+  box-shadow: 0px 0px 7px -2px #8b8989;
 }
 
+
+.infoMoney{
+    font-size: 1.4rem;
+    font-weight: 600;
+}
+
+.infoMoneyRate{
+    margin-left: 1rem;
+}
+
+
+.infoIcon{
+    font-size: 14px;
+    margin-left: 5px;
+    color: green;
+}
+
+.infoIcon.nagative{
+    color: red;
+}
+
+.infoSub{
+    font-size: 1rem;
+    color: gray;
+    white-space: nowrap;
+}
 
