--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -83,6 +83,14 @@ input::placeholder{
   display: flex;
   align-items: center;
   gap: .3rem;
+  margin-top: -1.5rem;
+  cursor: pointer;
+}
+
+.buttonEmployeePage{
+  display: flex;
+  align-items: center;
+  gap: .3rem;
   margin-top: 2rem;
   cursor: pointer;
 }
