--- a/src/components/UserList.css
+++ b/src/components/UserList.css
@@ -44,3 +44,56 @@ table {
     color: #14337C;
 
   }
+
+
+
+
+/* Adicione ao seu arquivo UserList.css ou ajuste conforme necessário */
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Cor de fundo preta semi-transparente */
+  z-index: 999; /* Coloque o overlay acima do modal */
+}
+
+.delete-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border: 1px solid #ccc;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
+.delete-modal p {
+  margin-bottom: 15px;
+}
+
+.delete-modal button {
+  margin-right: 10px;
+  padding: 8px 16px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+.delete-modal button:hover {
+  background-color: #0056b3;
+}
+
+.delete-modal button:last-child {
+  background-color: #ccc;
+  color: #333;
+}
+
+.delete-modal button:last-child:hover {
+  background-color: #999;
+}
