--- a/src/pages/Admin/Admin.css
+++ b/src/pages/Admin/Admin.css
@@ -7,8 +7,12 @@
     display: flex;
     gap: 1rem;
   color: #14337c;
+  padding-block: .5rem;
   }
 
   .AdminContainer{
     flex: 3;
+  }
+  .AdminMenu{
+    margin-top: 1rem;
   }
