--- a/src/components/AdminMenu.css
+++ b/src/components/AdminMenu.css
@@ -67,7 +67,7 @@
   background-color: white;
   padding: 20px;
   border: 1px solid #888;
-  width: 50%;
+  width: 27dvw;
   align-items: center;
   position: relative;
 }
@@ -75,7 +75,7 @@
 .close {
   color: #aaa;
   float: right;
-  font-size: 28px;
+  font-size: 2.5rem;
   font-weight: bold;
   cursor: pointer;
 }
