--- a/src/components/UserList.css
+++ b/src/components/UserList.css
@@ -119,3 +119,12 @@ table {
   gap: 2rem;
   padding: 2rem;
 }
+
+/* Adicione ao seu arquivo UserList.css ou ajuste conforme necessário */
+
+.close-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
