--- a/src/components/AdminMenu.css
+++ b/src/components/AdminMenu.css
@@ -10,17 +10,17 @@
   color: white;
   padding: .8rem;
   border: 0;
-  border-radius: 100px;
+  border-radius: 60px;
   cursor: pointer;
   font-size: 1rem;
   font-family: "urbanist";
   font-weight: 600;
+  margin-bottom: 1rem;
 }
 .user-form {
   display: flex;
   flex-direction: column;
   width: 300px;
-  margin-top: 20px;
 }
 
 .user-form label {
