--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -36,3 +36,60 @@
     background-color: rgb(228, 228, 250);
     border-radius: 10px;
 }
+
+
+@media (max-width: 600px) {
+
+}
+
+@media (min-width: 700px) {
+   .sidebarMobile{
+    display: none;
+   }
+}
+.hamburger-icon {
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 20px;
+  }
+  
+  .bar1, .bar2, .bar3 {
+    width: 30px;
+    height: 3px;
+    background-color: #333;
+    transition: 0.4s;
+  }
+  
+  .open .bar1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+  }
+  
+  .open .bar2 {
+    opacity: 0;
+  }
+  
+  .open .bar3 {
+    transform: rotate(45deg) translate(-5px, -6px);
+  }
+  
+  .menu {
+    display: flex;
+    flex-direction: column;
+    background-color: #f9f9f9;
+    padding: 10px;
+    position: absolute;
+    top: 10rem;
+    left:  0;
+    border: 1px solid #ddd;
+  }
+  
+
+  @media screen and (width <= 600px) {
+    .desktop{
+        display: none;
+    }
+    
+  }
