--- a/src/components/topBar/TopBar.module.css
+++ b/src/components/topBar/TopBar.module.css
@@ -57,3 +57,10 @@
     height: 40px;
     border-radius: 50%;
 }
+
+
+@media screen and (width <= 600px ) {
+    .topBar{
+      display: none;
+    }
+  }
