--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -38,9 +38,7 @@
 }
 
 
-@media (max-width: 600px) {
 
-}
 
 @media (min-width: 700px) {
    .sidebarMobile{
@@ -92,4 +90,15 @@
         display: none;
     }
     
+  }
+
+  .hamburger-menu
+  {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Cor de fundo preta semi-transparente */
+    z-index: 999; /* Coloque o overlay acima do modal */
   }
