--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -79,12 +79,20 @@
     background-color: #f9f9f9;
     padding: 10px;
     position: absolute;
-    top: 10rem;
+    top: -.5rem;
     left:  0;
     border: 1px solid #ddd;
+    height: 100dvh;
   }
   
-
+  
+.shadow{
+   
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Cor de fundo preta semi-transparente */
+  z-index: 999; /* Coloque o overlay acima do modal */
+}
   @media screen and (width <= 600px) {
     .desktop{
         display: none;
