--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -33,7 +33,7 @@
 }
 
 .sidebarlistItem.active, .sidebarlistItem:hover{
-    background-color: rgb(228, 228, 250);
+    color: rgb(228, 228, 250);
     border-radius: 10px;
 }
 
