--- a/src/pages/Admin/Admin.css
+++ b/src/pages/Admin/Admin.css
@@ -2,7 +2,10 @@
     display: flex;
     flex-direction: column;
   }
-  
+  .cadastro{
+    width: 70vw;
+  }
+
   .h1{
     display: flex;
     gap: 1rem;
