--- a/src/pages/Admin/Admin.css
+++ b/src/pages/Admin/Admin.css
@@ -21,6 +21,10 @@
     margin-top: 1rem;
   }
 
+  .sidebar{
+    display: flex;
+    align-items: center;
+  }
  
 
   @media screen and (width <= 600px) {
