--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -85,7 +85,7 @@ input::placeholder{
   gap: .3rem;
   cursor: pointer;
   margin-top: 28rem;
-  color: #fff;
+  color: black;
 }
 
 .buttonEmployeePage{
