--- a/src/AdminPage.css
+++ b/src/AdminPage.css
@@ -32,7 +32,7 @@ header{
 header .logo{
   position: relative;
   color: #fff;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-weight: 600;
   text-decoration: none;
 }
@@ -45,10 +45,11 @@ header nav a{
   position: relative;
   text-decoration: none;
   padding: 12px 20px;
-  color: #fff;
+  color:black;
   letter-spacing: 0.1em;
-  font-weight: 400;
+  font-weight: 600;
   font-size: 1rem;
+  font-family: "urbanist";
 }
 
 header nav #indicator{
@@ -93,7 +94,7 @@ ul li {
 }
 
 :root{
-  --clr:#2c363f;
+  --clr:white;
 
 }
 
