--- a/src/components/UserList.css
+++ b/src/components/UserList.css
@@ -25,8 +25,9 @@ table {
 
   .administrador {
     color: #11C7A1 !important; 
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     font-weight: 600;
+    font-family: "poppins";
 
    
     
@@ -35,8 +36,16 @@ table {
   
   .funcionario {
     color: #F4A32D !important;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     font-weight: 600;
+    font-family: "poppins";
+  }
+
+  .Gerente{
+    color: black!important;
+    font-size: 1.1rem;
+    font-weight: 600;
+    font-family: "poppins";
   }
 
 
