--- a/src/components/UserList.css
+++ b/src/components/UserList.css
@@ -42,7 +42,7 @@ table {
   }
 
   .Gerente{
-    color: black!important;
+    color: #14337c!important;
     font-size: 1.1rem;
     font-weight: 600;
     font-family: "poppins";
