--- a/src/AdminPage.css
+++ b/src/AdminPage.css
@@ -123,12 +123,40 @@ a:hover::after {
 @media screen  and ( 700px <= width){
   .navbar{
     display: none;
+    flex-direction: row;
   }
 }
 
+/* RegisterPage.css */
+.page-container {
+  margin-top: 5rem;
+}
 
+.navContainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  padding: 1rem;
+  margin-top: 4rem;
 
-.navContainer nav a{
+}
+
+nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+}
+
+nav ul li {
+  margin-right: 20px;
+  color: black;
+  cursor: pointer;
+  font-weight: 600;
+
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, sans-serif;
+  font-size: 1.2rem;
 }
