--- a/src/AdminPage.css
+++ b/src/AdminPage.css
@@ -152,11 +152,35 @@ nav ul {
 }
 
 nav ul li {
-  margin-right: 20px;
+  margin-right: 3rem;
   color: black;
   cursor: pointer;
   font-weight: 600;
 
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, sans-serif;
-  font-size: 1.2rem;
+  font-family: "poppins", sans-serif;
+  font-size: 1rem;
+}
+
+/* AdminPage.css */
+
+/* Estilo para a classe active-item */
+.cadastros.active-item {
+  /* Adicione seus estilos aqui */
+  color: #2196f3; /* Exemplo de estilo */
+  font-weight: bold; /* Exemplo de estilo */
+}
+
+/* Outros estilos para a classe cadastros */
+.cadastros {
+  /* Adicione seus estilos aqui */
+  color: black; /* Exemplo de estilo */
+}
+
+/* Estilo padrão para a classe cadastros */
+
+
+/* Estilo para a classe cadastros quando o mouse estiver sobre o elemento */
+.cadastros:hover {
+  color: #2196f3; /* Cor do texto quando hover */
+  /* Outros estilos ao passar o mouse por cima */
 }
