--- a/src/AdminPage.css
+++ b/src/AdminPage.css
@@ -137,7 +137,7 @@ a:hover::after {
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #fff;
+  background-color: #FAFAFA;
   padding: 1rem;
   margin-top: 4rem;
 
