--- a/src/AdminPage.css
+++ b/src/AdminPage.css
@@ -233,3 +233,17 @@ nav ul li:hover::after {
 }
 
 
+
+
+header nav div::before {
+  content: "";
+  position: absolute;
+  background-color: #fff;
+  height: 3px;
+  width: 0;
+  left: 50%;
+  bottom: 1px;
+  transition: 0.3s ease; /* Adicione esta linha para um efeito de transição suave */
+  transform: translateX(-50%);
+}
+
