--- a/src/pages/Cadastros/Products.module.css
+++ b/src/pages/Cadastros/Products.module.css
@@ -23,14 +23,15 @@
   justify-content: center;
   align-items: center;
 }
-
 .modalContent {
   background-color: #fefefe;
   padding: 20px;
   border-radius: 5px;
   position: relative;
   width: 500px;
+  z-index: 9999; /* ou qualquer valor que seja suficientemente alto para garantir que esteja acima de outros elementos na página */
 }
+
 
 .close {
   color: #aaa;
