--- a/src/pages/Cadastros/Products.module.css
+++ b/src/pages/Cadastros/Products.module.css
@@ -28,11 +28,12 @@
   padding: 20px;
   border-radius: 5px;
   position: relative;
-  width: 500px;
+  width: 80dvw;
+  height: 85vh;
   z-index: 9999; /* ou qualquer valor que seja suficientemente alto para garantir que esteja acima de outros elementos na página */
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  margin-top: 5rem;
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: 4rem;
 }
 
 
@@ -60,11 +61,6 @@
   color: #555;
 }
 
-.description{
-  width: 16vw;
-  height: 15vh;
-
-}
 
 
 .button{
@@ -74,9 +70,12 @@
   padding: 0.5rem;
   border-radius: 1rem;
   width: 12dvw;
+  height: 9dvh;
   font-family: "poppins";
   font-weight: 500;
   cursor: pointer;
   font-size: .9rem;
+  
 
 }
+
