--- a/src/pages/Cadastros/Products.module.css
+++ b/src/pages/Cadastros/Products.module.css
@@ -28,11 +28,11 @@
   padding: 20px;
   border-radius: 5px;
   position: relative;
-  width: 70dvw;
+  width: 80dvw;
   height: 85vh;
   z-index: 9999; /* ou qualquer valor que seja suficientemente alto para garantir que esteja acima de outros elementos na página */
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   margin-top: 4rem;
 }
 
@@ -77,5 +77,12 @@
   font-size: .9rem;
   
 
+}
+
+.colorPickerPreview {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  margin-right: 5px;
 }
 
