--- a/src/AdminPage.css
+++ b/src/AdminPage.css
@@ -190,7 +190,7 @@ nav ul li {
   position: relative;
 }
 
-nav ul li::after {
+nav .ul li::after {
   content: "";
   position: absolute;
   background-color: #2196f3;
@@ -202,7 +202,7 @@ nav ul li::after {
   transform: translateX(-50%); /* Para centralizar a barra em relação ao texto */
 }
 
-nav ul li:hover::after {
+nav .ul li:hover::after {
   width: calc(70% + 40px); /* Ajuste o valor conforme necessário */
 }
 
