--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -107,3 +107,17 @@ input::placeholder{
   
 }
 
+.button {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  padding: 10px;
+  color: black; /* Cor do texto do botão */
+  cursor: pointer;
+  font-family: "poppins";
+  font-weight: 500;
+}
+
+.button:hover {
+  color: #0056b3; /* Cor de fundo do botão ao passar o mouse */
+}
