--- a/src/pages/Cadastros/Products.module.css
+++ b/src/pages/Cadastros/Products.module.css
@@ -29,8 +29,8 @@
   padding: 20px;
   border-radius: 5px;
   position: relative;
-  width: 80dvw;
-  height: 85vh;
+  width: 95dvw;
+  height: 78vh;
   z-index: 9999; /* ou qualquer valor que seja suficientemente alto para garantir que esteja acima de outros elementos na página */
   display: grid;
   grid-template-columns: repeat(5, 1fr);
@@ -91,7 +91,7 @@
 .colorContainer {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 10px;
+  margin-top: -40px;
 }
 
 /* Adicione esta classe para estilizar o seletor de fotos e a label */
@@ -137,4 +137,48 @@ button {
 .buttonUpdate:hover {
   border: 1px solid #d3d3d3; /* Usando um tom mais claro de cinza usando código hexadecimal */
 }
+/* Adicione essas regras ao seu arquivo CSS de estilos */
+.thumbnailSelector {
+  display: flex;
+}
 
+.thumbnailContainer {
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.thumbnailImage {
+  width: 50px; /* Ajuste o tamanho conforme necessário */
+  height: 50px; /* Ajuste o tamanho conforme necessário */
+}
+
+.fullImageContainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.fullImage {
+  max-width: 80%;
+  max-height: 80%;
+}
+/* No seu arquivo de estilo (por exemplo, Products.module.css) */
+
+/* No seu arquivo de estilo (por exemplo, Products.module.css) */
+
+.closeButton {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background-color: #fff;
+  border: none;
+  padding: 5px;
+  cursor: pointer;
+  /* Adicione outros estilos conforme necessário */
+}
