--- a/src/pages/Cadastros/Products.module.css
+++ b/src/pages/Cadastros/Products.module.css
@@ -209,7 +209,7 @@ button {
   border: 2px solid #ddd; /* Add a border for better visibility */
   border-radius: 5px;
   object-fit: contain;
- 
+  
 }
 
 .thumbnailImage:hover {
@@ -221,4 +221,11 @@ button {
   height: 400px; /* Set the height of the enlarged image */
   border: 2px solid #2A337C; /* Add a border for better visibility */
   border-radius: 5px;
+
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
+
+
