--- a/src/pages/Cadastros/Products.module.css
+++ b/src/pages/Cadastros/Products.module.css
@@ -186,8 +186,7 @@ button {
 .thumbnailContainer {
   display: flex;
   align-items: center;
-  justify-content: space-around; /* Optional: Adjust as needed */
-  flex-wrap: wrap; /* Allow the thumbnails to wrap to the next line */
+/* Allow the thumbnails to wrap to the next line */
 }
 
 .thumbnailItem {
