--- a/src/pages/Cadastros/Products.module.css
+++ b/src/pages/Cadastros/Products.module.css
@@ -202,6 +202,9 @@ button {
 .colorName {
   font-size: 14px;
   margin-bottom: 5px;
+  display: flex;
+  justify-content: left;
+  align-items: center;
 }
 
 .thumbnailImage {
