--- a/src/pages/Cadastros/Products.module.css
+++ b/src/pages/Cadastros/Products.module.css
@@ -231,18 +231,21 @@ button {
 /* ... (existing styles) */
 
 
-.enlargedImage {
-  width: 450px; /* Set the width of the enlarged image */
-  height: 450px; /* Set the height of the enlarged image */
-  border: 2px solid #2a337c; /* Add a border for better visibility */
-  border-radius: 5px;
+/* Add these styles to your existing CSS file or module */
 
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1;
+.thumbnail {
+  width: 50px; /* Adjust as needed */
+  height: 50px; /* Adjust as needed */
+  margin-right: 10px; /* Adjust spacing between thumbnails */
+  cursor: pointer;
 }
+
+.enlarged {
+  max-width: 100%;
+  max-height: 400px; /* Adjust as needed */
+  cursor: pointer;
+}
+
 
 /* Products.module.css */
 
