--- a/src/pages/Cadastros/Products.module.css
+++ b/src/pages/Cadastros/Products.module.css
@@ -304,3 +304,29 @@ button {
 }
 
 /* Adicione estilos adicionais conforme desejado */
+.h1Container{
+margin-left: 3rem;
+}
+@media screen and (900px <= width <= 1440px) {
+  .h1Container{
+    margin-left: 2rem;
+  }
+    
+}
+
+@media screen and (768px <= width <= 1360px) {
+  .h1Container{
+    margin-left: 3rem;
+  }
+    
+}
+
+@media screen and (800px <= width <= 1280px) {
+  .h1Container{
+    margin-left: 4.5rem;
+  }
+    
+}
+
+
+
