--- a/src/pages/Cadastros/Categories.css
+++ b/src/pages/Cadastros/Categories.css
@@ -2,7 +2,11 @@
 .category-table {
     width: 100%;
     border-collapse: collapse;
-    margin-top: 20px;
+    margin-top: 1rem;
+    margin: 0 auto;
+    width: 60vw;
+    position: relative;
+    margin-bottom: 4rem;
 }
 
 .category-table th, .category-table td {
@@ -12,9 +16,52 @@
 }
 
 .category-table th {
-    background-color: #f2f2f2;
+    background-color: white;
 }
 
 .category-table tbody tr:hover {
     background-color: #f5f5f5;
 }
+
+.Categorias{
+    color: #2B4788;
+}
+
+.categoryInput input{
+    width: 25dvw;
+}
+
+.categoryButton{
+    background-color: #14337C;
+    color: white;
+    border: 0;
+    padding: .5rem;
+    border-radius: .3rem;
+    font-family: "poppins";
+    font-size: 1rem;
+   
+
+}
+
+.addContainer{
+    margin-top: 5rem;
+    margin-bottom: 2rem;
+    margin-left: 50%;
+    
+}
+
+.buttonUpdate {
+    background-color: white;
+    border: 1px solid transparent; /* Tornar a borda transparente para não interferir na sombra */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 10dvw;
+    height: 7dvh;
+    font-size: 1.1rem;
+    border-radius: 5px;
+    gap: 0.5rem;
+    font-family: "poppins";
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); /* Adicionar a sombra na borda */
+    overflow: hidden; /* Para garantir que a sombra não se espalhe para fora do botão */
+  }
