--- a/src/components/UserList.css
+++ b/src/components/UserList.css
@@ -179,3 +179,70 @@ th, td {
 }
 
 
+
+
+
+
+
+
+/* Estilo para a sobreposição escura de fundo */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000; /* Certifique-se de que este valor seja maior que o z-index do modal */
+}
+
+/* Estilo para o modal de edição */
+.edit-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 20px;
+  z-index: 1001; /* Certifique-se de que este valor seja maior que o z-index da sobreposição */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+/* Estilo para o ícone de fechar */
+.close-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
+
+/* Estilo para os botões de ação no modal */
+.buttonEditStyle {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+/* Estilizar o botão de salvar */
+.buttonEditStyle button:first-child {
+  background-color: green;
+  color: #fff;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+/* Estilizar o botão de cancelar */
+.buttonEditStyle button:last-child {
+  background-color: #ddd;
+  color: #333;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+/* Adicione estilos adicionais conforme necessário */
