--- a/src/components/AdminMenu.css
+++ b/src/components/AdminMenu.css
@@ -128,6 +128,9 @@
       white-space: nowrap;
       width: 20vw;
     }
+    .nav .ul{
+      margin-left: 5rem;
+    }
   }
   @media screen and  (800px <= width <= 1025px){
     .admin-menu .formButtonStyle{
